# emmc_test

./: .gitignore  README
artix7/: Makefile  xc7a100tfgg484.pins
artix7/rtl/: fpga_top.v
artix7/sim/: .gitignore  start_sim.csh
ips/riscv/: alu_div.sv  controller.sv  cs_registers.sv  exc_controller.sv
rtl/: iobuf.sv  top.sv
rtl/components/: S55NLLPLLGS_ZP1500A_V1.2.5.v  SP55NLLD2RP_OV3_V0p2a.v  cluster_clock_gating.sv  cluster_clock_inverter.sv  cluster_clock_mux2.sv  generic_fifo.sv  iomux.sv  ram_4096x32.v  rstgen_lock.sv  sp_ram_smic55.sv  xilinx_axi_clock_converter_funcsim.v  xilinx_clock_manager_funcsim.v  xilinx_mem_1024x24_funcsim.v  xilinx_mem_128x26_dp_funcsim.v  xilinx_mem_128x8_dp_funcsim.v  xilinx_mem_16384x32_funcsim.v  (+3 more)
rtl/core/: boot_code.sv  (+10 more)
sw/: CMakeLists.txt  cmake_configure.riscv.gcc.sh
sw/libs/sys_lib/: CMakeLists.txt  oled.c
sw/libs/sys_lib/inc/: ann.h  bar.h  bmp.h  camctl.h  emmc.h  emmc_callback.h  event.h  gpio.h  i2c.h  int.h  memctl.h  oled.h  oledfont.h  ppu.h  pwm.h  sccb_bsp.h  spi.h  tft.h  timer.h  uart.h
sw/libs/sys_lib/src/: ann.c  camctl.c  emmc.c  emmc_callback.c  gpio.c  int.c  memctl.c  oled.c  pwm.c  sccb_bsp.c  spi.c  tft.c  uart.c  utils.c
sw0/: cmake_configure.riscv.gcc.sh
tb/: AXI_slave_monitor.sv  ddr3_sim_parameters.vh  init_mem.v  pin_map.sv  spiflash_s25fs128s.v  tb.sv  tb_camera_pkg.sv  tb_ddr3_pkg.sv  tb_ddr3_pkg.sv.bk  tb_lpddr_pkg.sv  tb_smic_ram_pkg.sv  tb_spi_pkg.sv  uart.sv  wiredelay.v
tb0/: pin_map.sv  pin_map.svh  spi_debug_test.svh  tb.sv  tb_smic_ram_pkg.sv  tb_spi_pkg.sv
vsim/: .gitignore
(+766 files in other folders)
